--- a/其他/找工作/单例模式+工厂模式.md
+++ b/其他/找工作/单例模式+工厂模式.md
@@ -144,7 +144,7 @@ public class Singleton {
  */
 public class Singleton {
 
-    public static Singleton instance;
+    public static final Singleton INSTANCE;
 
     private Singleton() {
 
@@ -152,9 +152,9 @@ public class Singleton {
 
     public static synchronized Singleton getInstance() {
         if (instance == null) {
-            return new Singleton();
+            INSTANCE = new Singleton();
         }
-        return instance;
+        return INSTANCE;
     }
 }
 ```
@@ -244,3 +244,191 @@ public class Singleton {
 }
 ```
 
+# 工厂模式
+
+## 工厂方法
+
+```java
+public interface Shape {
+    void draw();
+}
+
+public class Circle implements Shape {
+    
+    @Override
+    public void draw() {
+        System.out.println("draw circle");
+    }
+}
+
+public class Square implements Shape {
+    
+    @Override
+    public void draw() {
+        System.out.println("draw square");
+    }
+}
+
+public class ShapeFactory {
+    
+    public Shape getShape(String shapeType) {
+        if (shapeType == null) {
+            return null;
+        }
+        if (shapeType.equalsIgnoreCase("CIRCLE")) {
+            return new Circle();
+        }
+        if (shapeType.equalsIgnoreCase("SQUARE")) {
+            return new Square();
+        } 
+        return null;
+    }
+}
+
+public class FactoryPatternDemo {
+ 
+   public static void main(String[] args) {
+      ShapeFactory shapeFactory = new ShapeFactory();
+ 
+      //获取 Circle 的对象，并调用它的 draw 方法
+      Shape circle = shapeFactory.getShape("CIRCLE");
+ 
+      //调用 Circle 的 draw 方法
+      circle.draw();
+ 
+      //获取 Square 的对象，并调用它的 draw 方法
+      Shape square = shapeFactory.getShape("SQUARE");
+ 
+      //调用 Square 的 draw 方法
+      square.draw();
+   }
+}
+```
+
+## 抽象工厂
+
+```java
+public interface Shape {
+    void draw();
+}
+
+public class Circle implements Shape {
+    
+    @Override
+    public void draw() {
+        System.out.println("draw circle");
+    }
+}
+
+public class Square implements Shape {
+    
+    @Override
+    public void draw() {
+        System.out.println("draw square");
+    }
+}
+
+public interface Color {
+   void fill();
+}
+
+public class Red implements Color {
+ 
+   @Override
+   public void fill() {
+      System.out.println("fill red");
+   }
+}
+
+public class Green implements Color {
+ 
+   @Override
+   public void fill() {
+      System.out.println("fill green");
+   }
+}
+
+public abstract class AbstractFactory {
+    public abstract Shape getShape(String shape);
+    public abstract Color getColor(String color);
+}
+
+public class ShapeFactory extends AbstractFactory {
+    
+    @Override
+    public Shape getShape(String shapeType) {
+        if (shapeType == null) {
+            return null;
+        }
+        if (shapeType.equalsIgnoreCase("CIRCLE")) {
+            return new Circle();
+        }
+        if (shapeType.equalsIgnoreCase("SQUARE")) {
+            return new Square();
+        } 
+        return null;
+    }
+    
+    @Override
+    public Color getColor(String colorType) {
+        return null;
+    }
+}
+
+public class ShapeFactory extends AbstractFactory {
+    
+    @Override
+    public Color getColor(String colorType) {
+        if (colorType == null) {
+            return null;
+        }
+        if (colorType.equalsIgnoreCase("RED")) {
+            return new Red();
+        }
+        if (colorType.equalsIgnoreCase("GREEN")) {
+            return new Green();
+        } 
+        return null;
+    }
+    
+    @Override
+    public Shape getShape(String shapeType) {
+        return null;
+    }
+}
+
+public class FactoryProducer {
+    
+    public static AbstractFactory getFactory(String choice){
+      if(choice.equalsIgnoreCase("SHAPE")){
+         return new ShapeFactory();
+      } else if(choice.equalsIgnoreCase("COLOR")){
+         return new ColorFactory();
+      }
+      return null;
+   }
+}
+
+public class AbstractFactoryPatternDemo {
+   public static void main(String[] args) {
+ 
+      //获取形状工厂
+      AbstractFactory shapeFactory = FactoryProducer.getFactory("SHAPE");
+ 
+      //获取形状为 Circle 的对象
+      Shape circle = shapeFactory.getShape("CIRCLE");
+ 
+      //调用 Circle 的 draw 方法
+      circle.draw();
+ 
+      //获取颜色工厂
+      AbstractFactory colorFactory = FactoryProducer.getFactory("COLOR");
+ 
+      //获取颜色为 Red 的对象
+      Color red = colorFactory.getColor("RED");
+ 
+      //调用 Red 的 fill 方法
+      red.fill();
+   }
+}
+```
