--- a/其他/找工作/排序算法.md
+++ b/其他/找工作/排序算法.md
@@ -591,7 +591,7 @@ public class BreadthFirst {
         if (root == null) {
             return;
         }
-        LinkedList<TreeNode> queue = new LinkedList<>();
+        Queue<TreeNode> queue = new LinkedList<>();
         queue.offer(root);
         while (!queue.isEmpty()) {
             TreeNode node = queue.poll();
@@ -624,7 +624,7 @@ public class DepthFirst {
         if (root == null) {
             return;
         }
-        LinkedList<TreeNode> stack = new LinkedList<>();
+        Deque<TreeNode> stack = new LinkedList<>();
         stack.push(root);
         while (!stack.isEmpty()) {
             TreeNode node = stack.pop();
